@@ -1,5 +1,9 @@
 2005-09-11  Sven Panne  <sven.panne@aedion.de>
 
+	* src/alutInit.c: _alutSanityCheck doesn't terminate the program
+	in case of an error anymore, it simply sets the error
+	condition. Some additional cleanup.
+
 	* src/alutError.c: Print a message to stderr when an error
 	condition is set and the ALUT_DEBUG environment variable is
 	defined.
